packages/bcode/tests/ui/fail/testing_internals_are_private.rs
use bcode::testing::ScriptedProvider;

fn main() {
    let provider = ScriptedProvider::new([]);
    let _state = provider.state;
}
